# django-google-structured-logger

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pr-validation.yaml  release.yml
django_google_structured_logger/: apps.py  constants.py  formatter.py  graphene_middlewares.py  middleware.py  middlewares.py  settings.py  storages.py
tests/: conftest.py  settings.py  test_formater.py  test_middlewares.py
