[project]
name = "django-google-structured-logger"
version = "3.0.0"
description = "Plugin for django to support  Google Structured Logger"
authors = [{ name = "Farruh Sheripov", email = "sheripov.farruh@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "python-json-logger>=2.0.7,<3",
    "contextvars~=2.4",
    "django>=3,<6",
    "setuptools-scm>=7.1.0,<8",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0,<5"]

[tool.hatch.build.targets.sdist]
include = ["django_google_structured_logger"]

[tool.hatch.build.targets.wheel]
include = ["django_google_structured_logger"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"
pytest-mock = "^3.14.1"
ruff = "^0.11.13"
mypy = "^1.16.0"
django-stubs = "^5.2.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "./src"
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = false
pretty = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
testpaths = ["tests"]
addopts = "--cov=django_google_structured_logger --cov-report=term-missing --cov-report=xml --cov-report=html"
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.django-stubs]
django_settings_module = "tests.settings"
strict_settings = false
ignore_missing_settings = true
