[project]
name = "django-google-structured-logger"
version = "2.8.11"
description = "Plugin for django to support  Google Structured Logger"
authors = [{ name = "Farruh Sheripov", email = "sheripov.farruh@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "python-json-logger>=2.0.7,<3",
  "contextvars~=2.4",
  "django>=3,<6",
  "setuptools-scm>=7.1.0,<8",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0,<5"]

[tool.hatch.build.targets.sdist]
include = ["django_google_structured_logger"]

[tool.hatch.build.targets.wheel]
include = ["django_google_structured_logger"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
mypy_path = "./src"
python_version = "3.8"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = false
pretty = true

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["**/migrations/*.py"]

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
    | migrations
    | \.exports
  )/
)
'''
