[metadata]
name = django-google-structured-logger
url = https://github.com/muehlemann-popp/django-google-structured-logger
description = Plugin for django to support  Google Structured Logger
long_description = file: README.md
long_description_content_type = text/markdown
description_file = README.md
author = Farruh Sheripov
author_email = farruh.sheripov@muehlemann-popp.ch
maintainer = Silvan Mühlemann
maintainer_email = silvan.muehlemann@muehlemann-popp.ch
license = MIT
classifiers =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.8, <=3.11
install_requires =
    Django >= 3.0, <= 4.2
    python-json-logger == 2.0.7
    contextvars == 2.4

[upload]
repository = mpom
show_response = 1

[flake8]
exclude = .tox,.git,*/migrations/*,*/static/*,docs,.venv,__init__.py
ignore = E203, E266, E501, W503
max-line-length = 120
max-complexity = 18
select = B,C,E,F,W,T4
